@startuml

package "BusinessRules" #fff {

    package "Entity" #ddd {

        class User {
            {field} id: int
            {field} firstName: string
            {field} lastName: string
            {field} email: string
            {field} password: string
            {field} plainPassword: string
            {field} registeredAt: DateTimeInterface
        }

        class Member {
        }

        class Admin {
            {field} pseudo: string
        }

        User <|-- Member
        User <|-- Admin
    }
}

@enduml